--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,67 @@
-.img{
+body{
+    background-color: rgb(231, 231, 231);
+}
+header{
     height: 150px;
-    width: 200px;
+    display: flex;
+    background-color: burlywood ;
+
+}
+header > img{
+    margin-top: 15px;
+    margin-left: 20%;  
+    height: 120px;
+    width: 170px;
+}
+header > p {
+    font-size: 4.5rem;
+    margin-top: 30px;
+    margin-left: 5%;
+}
+.meme{
+margin-top:30px;
+margin-left: 3%;
+font-size: 2rem;
+position: relative;
+text-align: center;
+}
+.memeForm{
+margin-left: 25%;
+margin-top: 20px;
+}
+.memeForm > input {
+    width: 350px;
+    margin-left: 20px;
+    height: 22px;
+    border-radius: .1rem;
+}
+.memeForm > button {
+    width: 50px;
+    height: 30px;
+    border-radius: .2rem;
+    background-color: coral;
+    margin-left: 10px;
+}
+
+.memeImg{
+    width: 650px;
+    height: 500px;
+}
+
+.meme > h2 {
+    color: white;
+    text-align: center;
+    position: absolute;
+    transform: translateX(-50%);
+    text-transform: uppercase;
+    left:50%;
+}
+
+.top{
+position: absolute;
+top:-7%;
+}
+.bottom{
+    position: absolute;
+    top: 78%;
 }
